objects/ReusableContentKav__c.object
<CustomObject>
    <description>Junction Object between Reusable Content and Article Records</description>
    <fields>
        <fullName>ArticleNumber__c</fullName>
        <label>ArticleNumber</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleType__c</fullName>
        <label>ArticleType</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ArticleVersionTypeName__c</fullName>
        <label>ArticleVersionTypeName</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DraftArticleURL__c</fullName>
        <formula>if ( DraftKavId__c == &quot;&quot;, &quot;&quot;, HYPERLINK(DraftKavId__c, &quot;Draft Knowledge Article &quot; ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Draft Article</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DraftKavId__c</fullName>
        <label>DraftKavId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KavIdDateTime__c</fullName>
        <label>KavIdDateTime</label>
        <length>60</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KavId__c</fullName>
        <label>KavId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KnowledgeArticleId__c</fullName>
        <label>KnowledgeArticleId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Status__c</fullName>
        <label>Publish Status</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReusableContentId__c</fullName>
        <label>Reusable Content</label>
        <referenceTo>Reusable_Content__c</referenceTo>
        <relationshipLabel>Reusable Content Articles</relationshipLabel>
        <relationshipName>Reusable_Content_Articles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>SearchKeyword__c</fullName>
        <label>Search Keyword</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VersionNumber__c</fullName>
        <label>VersionNumber</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kavUrl__c</fullName>
        <formula>HYPERLINK(KavIdDateTime__c, &quot;View Knowledge Article &quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Knowledge Article</label>
        <type>Text</type>
    </fields>
    <label>Reusable Content Article</label>
    <nameField>
        <displayFormat>RCA-{000000000}</displayFormat>
        <label>Reusable Content Article Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reusable Content Articles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>